# aws-hosted-minecraft

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: external-api-grounding.md  harness-format-enforcement.md  line-length.md  python-style.md  rule-scoping-decisions.md  scripted-infra-setup.md  skill-matching-redirects.md  technology-picks-research.md
.claude/skills/create-github-issue/: SKILL.md
.claude/skills/create-github-issue/scripts/: validate_issue.py
.claude/skills/create-github-pr/: SKILL.md
.claude/skills/create-github-pr/scripts/: validate_pr.py
.claude/skills/implement-github-issue/: SKILL.md
.claude/skills/update-github-issue/: SKILL.md
.claude/skills/vet-dependency/: SKILL.md
.claude/skills/vet-dependency/scripts/: common.py  conftest.py  test_vet_gh_action.py  test_vet_npm.py  test_vet_pypi.py  vet_gh_action.py  vet_npm.py  vet_pypi.py
docs/: aws-auth-setup.md
infra/: .terraform.lock.hcl  README.md  dns.tf  lightsail.tf  networking.tf  outputs.tf  providers.tf  storage.tf  terraform.auto.tfvars.example  variables.tf
infra/backend-configs/: prod.hcl.example
infra/bootstrap/: README.md  dynamodb.tf  outputs.tf  providers.tf  s3.tf  terraform.auto.tfvars.example  variables.tf
scripts/aws/: inventory.sh  verify-credentials.sh
scripts/server/: _common.py  conftest.py  deploy-updater.sh  install.py  test_install.py  test_update.py  update.py
