[project]
name = "aws-hosted-minecraft"
version = "0.1.0"
description = "A toolkit for deploying and managing Minecraft servers on AWS LightSail."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
pythonpath = ["scripts/server"]
